# evo

./: .gitignore  Cargo.toml  LICENSE  config.toml  sketch.js  view.html
src/: active_genome.rs  active_plant.rs  blob.rs  cell_kind.rs  doublet.rs  doublet_fn.rs  either.rs  entity.rs  genome.rs  genomes.rs  grid.rs  grid_builder.rs  inactive_genome.rs  inactive_plant.rs  main.rs  neighbors.rs  organisms.rs  owner.rs  plant.rs  plants.rs  position.rs  rand.rs  simple_graph.rs  singlet_fn.rs  square_grid.rs  step.rs  tile_id_builder.rs  tile_list.rs  tiles.rs  trial_result.rs  triplet_fn.rs  triplet_i.rs  triplet_l.rs  world.rs  world_builder.rs
src/genomes/: doublet_genome.rs  triplet_genome.rs
